# jedAi-council

./: .env.example  .gitignore  README.md  pyproject.toml
src/jedai_council/: crew.py  main.py
